<resources>
    <string name="app_name">Loan Calculator</string>
    <string name="credit_sum">Loan amount</string>
    <string name="credit_percents">Interest rate per year</string>
    <string name="action_settings">Settings</string>
    <string name="step_minus">-</string>
    <string name="step_plus">+</string>
    <string name="monthsCredit">Loan terms</string>
    <string name="months">Mon./yrs</string>
    <string name="months_only">Mon</string>
    <string name="monthlyPayment">Monthly payment</string>
    <string name="wholePayment">Total pay</string>
    <string name="overpay">Sum overpay</string>
    <string name="overpayPercents">Overpay %</string>
    <string name="recentYearDelta0">Diff. with prev.</string>
    <string name="recentYearDelta">year, %</string>
    <string name="title_activity_payment_schedule">Payment Schedule</string>
    <string name="dialog_extraPayment_title">Extra Payment</string>
    <string name="dialog_extraPayment_message">Set extra payment</string>
    <string name="payment_for_credit">For loan</string>
    <string name="payment_for_percents">For %</string>
    <string name="payment_extra_payment">Extra payment</string>
    <string name="payment_to_pay">To pay</string>

</resources>
