<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
    android:id="@+id/rlayout_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/TermsLayout">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/frameLayout"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <requestFocus/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_sum"
                android:id="@+id/tv_Sum"
                android:layout_gravity="left|top"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txt_creditSum"
                android:layout_gravity="left|top"
                android:layout_below="@+id/tv_Sum"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:width="110dp">

            </EditText>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_minus"
                android:id="@+id/btn_creditSumMinus"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/txt_creditSum"
                android:layout_alignBottom="@+id/txt_creditSum"
                android:textSize="@dimen/abc_text_size_large_material"
                android:layout_marginLeft="20dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_plus"
                android:id="@+id/btn_creditSumPlus"
                android:textStyle="bold"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignTop="@+id/btn_creditSumMinus"
                android:layout_toRightOf="@+id/btn_creditSumMinus"
                android:layout_toEndOf="@+id/btn_creditSumMinus"
                android:textSize="@dimen/abc_text_size_large_material" />
        </RelativeLayout>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/relativeLayout"
        android:layout_weight="1">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_minus"
            android:id="@+id/btn_percentsMinus"
            android:layout_alignBottom="@+id/et_Percents"
            android:layout_toRightOf="@+id/et_Percents"
            android:layout_toEndOf="@+id/et_Percents"
            android:textSize="@dimen/abc_text_size_large_material"
            android:layout_marginLeft="20dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/et_Percents"
            android:layout_gravity="left|top"
            android:layout_below="@+id/tv_Percents"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:editable="false"
            android:width="110dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_percents"
            android:id="@+id/tv_Percents"
            android:layout_gravity="left|top" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_plus"
            android:id="@+id/btn_percentsPlus"
            android:textStyle="bold"
            android:layout_alignWithParentIfMissing="false"
            android:layout_above="@+id/tableLayout"
            android:layout_toRightOf="@+id/btn_percentsMinus"
            android:layout_toEndOf="@+id/btn_percentsMinus"
            android:textSize="@dimen/abc_text_size_large_material" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_below="@+id/btn_percentsMinus"
            android:layout_alignLeft="@+id/btn_percentsMinus"
            android:layout_alignStart="@+id/btn_percentsMinus"
            android:layout_alignParentStart="true"
            android:id="@+id/tableLayout">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            </TableRow>
        </TableLayout>

    </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/TermsLayout"
        android:id="@+id/ListHeader">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:text="@string/monthsCredit"
                android:id="@+id/textView"
                android:layout_below="@+id/btn_percentsMinus"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp"
                android:textColor="#20093b"
                android:textStyle="bold"
                android:width="70dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:text="@string/monthlyPayment"
                android:id="@+id/textView30"
                android:layout_below="@+id/btn_percentsMinus"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp"
                android:textColor="#20093b"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="right" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:text="@string/overpay"
                android:id="@+id/textView31"
                android:layout_below="@+id/btn_percentsMinus"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp"
                android:textColor="#20093b"
                android:textStyle="bold"
                android:gravity="right"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:text="@string/recentYearDelta0"
                android:id="@+id/textView32"
                android:layout_below="@+id/btn_percentsMinus"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp"
                android:textColor="#007e66"
                android:textStyle="bold"
                android:gravity="right"
                android:width="75dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:id="@+id/textView2"
                android:layout_below="@+id/btn_percentsMinus"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#20093b"
                android:textStyle="bold"
                android:width="70dp"
                android:text="@string/months" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:text="@string/wholePayment"
                android:id="@+id/textView3"
                android:layout_below="@+id/btn_percentsMinus"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#FF007E66"
                android:textStyle="bold"
                android:gravity="right"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:text="@string/overpayPercents"
                android:id="@+id/textView4"
                android:layout_below="@+id/btn_percentsMinus"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#FF007E66"
                android:textStyle="bold"
                android:gravity="right"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:text="@string/recentYearDelta"
                android:id="@+id/textView5"
                android:layout_below="@+id/btn_percentsMinus"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="0dp"
                android:textColor="#007e66"
                android:width="75dp"
                android:textStyle="bold"
                android:gravity="right" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/listViewItems"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/ListHeader" />

</RelativeLayout>
