<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nz.common.creditcalculator.PaymentScheduleActivityFragment"
    tools:showIn="@layout/activity_payment_schedule"
    >

<!--
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/payments_header_frame"
        style="@style/elementShadow">
-->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="2"
            android:id="@+id/payments_header_grid"
            android:layout_marginTop="-7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/credit_sum"
                android:id="@+id/textView18"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/tv_payments_sum"
                android:layout_row="0"
                android:layout_column="1"
                style="@style/paymentsHeaderText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/credit_percents"
                android:id="@+id/textView19"
                android:layout_row="1"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/tv_payments_percents"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_marginLeft="5dp"
                style="@style/paymentsHeaderText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView20"
                android:text="@string/monthsCredit"
                android:layout_row="2"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/tv_payments_total_months"
                android:layout_row="2"
                android:layout_column="1"
                style="@style/paymentsHeaderText" />

        </GridLayout>
    <!--    </FrameLayout>-->

    <!--        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/payments_header_frame">
        -->
                <ListView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lv_payments_schedule"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="false"
                    android:layout_alignStart="@id/payments_header_grid"
                    android:layout_alignLeft="@+id/payments_header_grid"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignTop="@+id/payments_header_grid"
                    android:layout_marginTop="65dp" />
    <!--            </FrameLayout>-->

            </RelativeLayout>
